# object_collection_robotic_arm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  doxconfig  package.xml
UML/initial/: UML_Activity_Diagram  UML_Class_Diagram
include/: KukaKinematics.hpp
include/object_collection_robotic_arm/: Detection.hpp  KukaGripper.hpp  KukaKinematics.hpp
include/plugins/: CameraPlugin.hpp
launch/: kuka.launch  kuka_fwd.launch
results/: cppcheck  cpplint
src/: CameraPlugin.cpp  Detection.cpp  KukaGripper.cpp  KukaKinematics.cpp  kuka_execute.cpp  main.cpp
test/: allTests.test  main.cpp  testDetection.cpp  testKukaGripper.cpp  testKukaKinematics.cpp
world/: final_world  kuka_world  kuka_world_BB  kuka_world_BR  kuka_world_GB  kuka_world_GO  kuka_world_GRB  kuka_world_RB  kuka_world_RR  my_world  new_world  robot_world  robot_world_2
