<?xml version="1.0"?>
<package format="2">
  <name>object_collection_robotic_arm</name>
  <version>0.0.0</version>
  <description>This is the object_segregation package. It implements object
               segregation algorithm on a Kuka robot in Gazebo.</description>

  <maintainer email="ashgo95@umd.edu">Ashwin Goyal</maintainer>
  <maintainer email="anirudh@umd.edu">Anirudh Topiwala</maintainer>

  <license>LGPLv3</license>

  <url type="website">https://github.com/Ghost1995/
                                          Object_Collection_Robotic_Arm</url>

  <author email="ashgo95@umd.edu">Ashwin Goyal</author>
  <author email="anirudh@umd.edu">Anirudh Topiwala</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aruco</build_depend>
  <build_depend>aruco_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>aruco</build_export_depend>
  <build_export_depend>aruco_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>diagnostic_updater</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>aruco</exec_depend>
  <exec_depend>aruco_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>gtest</test_depend>
</package>
